# poyonga

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  THANKS  index.html  params.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
examples/: eventlet_http.py  gevent_http.py  gqtp.py  http.py  http_example.py
examples/codesearch/: 1_create.py  2_load.py  3_search.py
examples/groonga_microblog_tutorial/: 1_crate.py  2_load.py  2_load_with_pyarrow.py  3_search.py  3_search_error_with_pyarrow.py  3_search_with_pyarrow.py  4_search_with_trace_log.py
poyonga/: __init__.py  client.py  const.py  result.py
test/: test_poyonga.py
